Move unpack goal to generate-sources phase.

--- a/cello/cello-dnacompiler/pom.xml
+++ b/cello/cello-dnacompiler/pom.xml
@@ -89,7 +89,7 @@
         <executions>
           <execution>
             <id>unpack</id>
-            <phase>package</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>unpack</goal>
             </goals>
