--- a/cello/cello-common/pom.xml
+++ b/cello/cello-common/pom.xml
@@ -63,10 +63,15 @@
       <artifactId>logicng</artifactId>
       <version>1.6.1</version>
     </dependency>
-	<dependency>
+    <dependency>
       <groupId>org.mariuszgromada.math</groupId>
       <artifactId>MathParser.org-mXparser</artifactId>
       <version>4.4.2</version>
-	</dependency>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.10.3</version>
+    </dependency>
   </dependencies>
 </project>
