--- a/cello/pom.xml
+++ b/cello/pom.xml
@@ -99,6 +99,31 @@
           </execution>
         </executions>
       </plugin>
+	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.1.1</version>
+        <configuration>
+		  <consoleOutput>true</consoleOutput>
+		  <!-- Inclued src/test/java -->
+		  <includeTestSourceDirectory>true</includeTestSourceDirectory>
+		  <!-- Make a warning a violation -->
+		  <violationSeverity>warning</violationSeverity>
+          <encoding>UTF-8</encoding>
+		  <configLocation>checkstyle.xml</configLocation>
+		  <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
+		  <suppressionsFileExpression>org.checkstyle.google.suppressionfilter.config</suppressionsFileExpression>
+        </configuration>
+		<executions>
+		  <execution>
+			<id>validate</id>
+			<phase>validate</phase>
+			<goals>
+			  <goal>check</goal>
+			</goals>
+		  </execution>
+		</executions>
+      </plugin>
     </plugins>
   </build>
   <distributionManagement>
