--- a/cello/cello-common/pom.xml
+++ b/cello/cello-common/pom.xml
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>24.1.1</version>
+      <version>25.0-jre</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
