--- a/cello/cello-dnacompiler/pom.xml
+++ b/cello/cello-dnacompiler/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.cellocad.v2</groupId>
     <artifactId>cello-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>cello-dnacompiler</artifactId>
   <properties>
@@ -24,21 +24,21 @@
       <artifactId>cello-logicsynthesis</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.cellocad.v2</groupId>
-      <artifactId>cello-logicoptimization</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cellocad.v2</groupId>
-      <artifactId>cello-clustering</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cellocad.v2</groupId>
-      <artifactId>cello-partitioning</artifactId>
-      <version>${project.version}</version>
-    </dependency>
+    <!-- <dependency> -->
+    <!--   <groupId>org.cellocad.v2</groupId> -->
+    <!--   <artifactId>cello-logicoptimization</artifactId> -->
+    <!--   <version>${project.version}</version> -->
+    <!-- </dependency> -->
+    <!-- <dependency> -->
+    <!--   <groupId>org.cellocad.v2</groupId> -->
+    <!--   <artifactId>cello-clustering</artifactId> -->
+    <!--   <version>${project.version}</version> -->
+    <!-- </dependency> -->
+    <!-- <dependency> -->
+    <!--   <groupId>org.cellocad.v2</groupId> -->
+    <!--   <artifactId>cello-partitioning</artifactId> -->
+    <!--   <version>${project.version}</version> -->
+    <!-- </dependency> -->
     <dependency>
       <groupId>org.cellocad.v2</groupId>
       <artifactId>cello-technologymapping</artifactId>
@@ -76,21 +76,21 @@
         <!-- http://dmp.fabric8.io/ -->
         <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
-		<extensions>true</extensions>
+        <extensions>true</extensions>
         <version>0.33.0</version>
         <configuration>
-		  <images>
-			<image>
-			  <name>${docker.image.prefix}/${project.artifactId}:%l</name>
-			  <build>
-				<args>
-				  <JAR_FILE>${project.build.finalName}-jar-with-dependencies.jar</JAR_FILE>
-				</args>
-				<dockerFile>src${file.separator}main${file.separator}docker${file.separator}Dockerfile</dockerFile>
-				<contextDir>${project.basedir}</contextDir>
-			  </build>
-			</image>
-		  </images>
+          <images>
+            <image>
+              <name>${docker.image.prefix}/${project.artifactId}:%l</name>
+              <build>
+                <args>
+                  <JAR_FILE>${project.build.finalName}-jar-with-dependencies.jar</JAR_FILE>
+                </args>
+                <dockerFile>src${file.separator}main${file.separator}docker${file.separator}Dockerfile</dockerFile>
+                <contextDir>${project.basedir}</contextDir>
+              </build>
+            </image>
+          </images>
         </configuration>
       </plugin>
       <plugin>
